<resources>

    <string name="app_name">Football Club</string>

    <string name="title_league">League</string>
    <string name="title_match_schedule">Match Schedule</string>
    <string name="title_detail">Detail</string>

    <string name="label_vs">VS</string>
    <string name="label_goals">Goals</string>
    <string name="label_shoots">Shoots</string>
    <string name="label_lineups">Lineups</string>
    <string name="label_goal_keeper">Goal Keeper</string>
    <string name="label_defense">Defense</string>
    <string name="label_midfield">Midfield</string>
    <string name="label_forward">Forward</string>
    <string name="label_substitute">Substitute</string>

</resources>
